room.css
body{
  background-color:#fafafa;
  color:#3c3c3c;
  text-align:center;
  line-height:1.6;
  font-size:16px;
}
h2{
  line-height:1.2
}
header{
  border-bottom: ridge;
  margin-bottom: 20px;
  font-size:18px;
}
#messages {
  margin: 0 auto;
  width: 100%;
  max-width: 650px;
  display: inline-block;
  text-align: left;
}
#messages > .message{
}
#messages > .message > .content{
  display: inline-block;
}
#messages > .chara-Narrator {
  background-color: #fff;
  box-shadow: 0 1px 1px #bbb;
  outline: dotted 1px #bbb;
  outline-offset: -5px;
  padding: 10px;
  text-align: center;
}
#messages > .chara-Narrator > .name {
  display: none;
}
#messages > .message:not(.chara-Narrator) {
  margin: 10px;
  padding: 10px;
  border-radius: 16px;
  border-bottom-left-radius: 0;
  box-shadow: 0 2px 3px #555;
}
#messages > .message:not(.chara-Narrator) > .name{
  font-size: 12px;
  margin-left: 20px;
  margin-top: -7px;
  opacity: 0.75;
  letter-spacing: 1px;
  word-spacing: 1px;
}
#messages > p {
  text-align: center;
}

#characters {
  display: block;
  float: right;
  width: 150px;
  padding: 20px;
  border: dotted 1px #555;
}
#characters > .character {
  font-weight: bold;
}
#characters .chara-Narrator {
  color: #555;
}
#characters > .character a {
  display: block;
  margin: 5px;
  text-decoration: none;
  box-shadow: 0 1px 2px #888;
}
#characters > .character a:hover {
  opacity: 0.5;
}

#new-character {
  margin-top: 20px;
  border-top: dotted 1px #555;
}

input,
textarea {
  font-family:serif;
}
#message-box textarea {
  border:none;
  background: none;
}
#message-box table {
  width: 100%;
  max-width: 700px;
  margin: 20px auto;
  border: dotted 1px #555;
  border-spacing: 6px;
}
#message-box td {
  line-height: 1em;
}
#message-box td#input-col {
  padding: 2px;
  border: solid 1px #555;
  box-shadow: 0 1px 1px #555 inset;
  background-color:#fff;
}
#message-box td#button-col {
  padding: 0;
  width: 20%;
  min-width: 75px;
  max-height: 100px;
}
#message-box textarea {
  margin: 0;
  padding: 0;
  width: 100%;
  resize: vertical;
  min-height: 60px;
}
#message-box input[type=submit] {
  width: 100%;
  height: 66px;
  font-size:18px;
  background-color: #fff;
  color: #222;
  border:solid 1px #3c3c3c;
  font-weight:bold;
  box-shadow: 0 1px 2px #888;
}
#message-box input[type=submit]:hover,
#message-box input[type=submit]:active {
  cursor:pointer;
  background-color:#3c3c3c;
  box-shadow: 0 1px 10px #555;
  color:#fafafa;
}

.pages {
  margin: 20px;
}

ul#stats {
  display: inline-block;
  border: dotted 1px #555;
  margin: 0;
  padding: 20px;
  padding-left: 40px;
}
#stats li {
  text-align: left;
}

